消费视图
